  windows widths.
* Changed field of view display to use minutes and seconds
* Fixed display of time scale when time is reversed
* Fixed jittering labels for stars distant from the sun
* Fixed depth ordering problem that caused satellites to appear in front of
  the horizon when viewed from the surface of Earth
* Made the correct hemisphere of the Moon face Earth
* Fixed Earth's rotation so that sunrise and sunset times are correct
* Fixed picking so that clicking on a distance planet will never select one of
  its satellites.
* Improved orbit calculation code to properly compute eccentric anomaly
* Render orbit outlines behind planets instead of in front of them
* Made it possible for clouds to move relative to the ground
* Eliminated star haloes that were visible in daylight
* Added Uranus's ring system
* Added Shrox's Mars Global Surveyor and Mars Odyssey models
* Windows: save rendering and label settings
* Windows: added movie capture feature
* Windows: fixed disappearing mouse cursor bug
* Windows: added slider for controlling number of stars displayed by
  star browser.
* Windows: vastly improved full screen support
* Unix: fixed problems with '--enable-debug' under automake (dramsey)
* Unix: Enhanced autoconfigure to enable automated distribution build, as well
        as building the buildstardb program used to create stars.dat (dramsey)
* Unix: Fixed Problem with --enable-debug=no acting as if --enable-debug=yes
        had been given. (dramsey)
* Unix: Changed --enable-gtk into --with-gtk, and made it automatic if Gtk+ and
        GtkGLArea is present. (dramsey)
* Unix: Inserted testing code for GtkGLArea into configure.in (dramsey)
* Unix: Integrated a current gnome macros package. (dramsey)
* Removed many errors and compiler warnings (dramsey)
* Label Galaxies option. (dramsey)
* Unix: Added several menu options already present in the windows version to
        the Gtk version. (dramsey)